--- a/src/components/pageTile/PageTile.css
+++ b/src/components/pageTile/PageTile.css
@@ -9,6 +9,7 @@
   transition: transform 0.3s ease;
   text-align: center;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  display: inline-block;
 }
 
 .tournament-tile:hover {
