--- a/src/index.css
+++ b/src/index.css
@@ -22,15 +22,13 @@ a {
 
 button {
   cursor: pointer;
-  background-color: #3498db;
   color: white;
   border: none;
+  background-color: transparent;
   padding: 10px 20px;
   font-size: 16px;
   border-radius: 5px;
   transition: background-color 0.3s ease;
 }
 
-button:hover {
-  background-color: #2980b9;
-}
+
