dev/ Tournament Card Stat Participant add

--- a/src/pages/tournamentspage/TournamentsPage.css
+++ b/src/pages/tournamentspage/TournamentsPage.css
@@ -68,6 +68,7 @@
 
 .modal-info svg {
   margin-right: 10px; /* Adjust the spacing between the icon and text */
+  vertical-align: text-top; 
 }
 
 .date-span{
