--- a/src/components/pageTile/PageTile.css
+++ b/src/components/pageTile/PageTile.css
@@ -18,14 +18,27 @@
 
 .tournament-logo {
   width: 100%;
-  max-width: 150px;
-  margin-bottom: 15px;
+  max-width: 140px;
 }
 
 .tournament-name {
-  font-size: 18px;
+  font-size: 16px;
   font-weight: bold;
-  margin: 10px 0;
+  margin: 5px 0;
+}
+
+.tile-info {
+  font-size: 18px;
+  color: #dce3e7;
+  align-items: center;
+  line-height: 18px; 
+}
+
+.tile-info svg {
+  color: #3498db;
+  margin-right: 8px;
+  vertical-align: text-top; 
+  width: auto; 
 }
 
 .tournament-info {
